2008-07-21  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/fltk_backend.cc: Don't include oct.h.
	Make compilation of entire file conditional on HAVE_FLTK.

	* gl-render.cc: Make compilation of entire file conditional on
	HAVE_OPENGL.

	* Makefile.in (GL_RENDER_SRC, FLTK_BACKEND_SRC): Delete variables.
	(DLD_XSRC): Always include fltk_backend.cc in the list.
	(DIST_SRC): Always include gl-render.cc in the list.

2008-07-19  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_VERSION): Now 3.1.50+.
	(OCTAVE_API_VERSION): Now api-v33+.

2008-07-18  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_VERSION): Now 3.1.50.
	(OCTAVE_API_VERSION): Now api-v33.
	(OCTAVE_RELEASE_DATE): Now 2008-07-18.
	(OCTAVE_COPYRIGHT): Update date to 2008.

2008-07-18  John W. Eaton  <jwe@octave.org>

	* Makefile.in (__magick_read__.df): New rule.
	Append MAGICK_INCFLAGS to CPPFLAGS.

	* Makefile.in (EXTRAS): Add graphics-props.cc to the list.
	List graphics-props.cc as a target generated by genprops.awk.

2008-07-18 Carlo de Falco  <carlo.defalco@gmail.com>

	* gl-render.h: Conditionally include GL/gl.h or OpenGL/gl.h
	and GL/glu.h or OpenGL/glu.h

2008-07-17  John W. Eaton  <jwe@octave.org>

	* symtab.cc (out_of_date_check_internal): New arg, dispatch_type.
	Use it to handle class methods.

	* toplev.h (octave_call_stack::do_caller): New function.
	(octave_call_stack::caller): Use it.

2008-07-17  Jaroslav Hajek <highegg@gmail.com>

	* Makefile.in (convhulln.oct, __delaunayn__.oct, __voronoi__.oct, 
	regexp.oct, urlwrite.oct, __glpk__.oct, fltk_backend.oct):
	Use OCT_LINK_DEPS instead of DL_LDFLAGS for target-specific
	dependencies.

2008-07-17  David Bateman  <dbateman@free.fr>

	* DLD-FUNCTION/__magick_read__.cc (F__magick_read__): Allow build
	without GraphicsMagick++ installed.

2008-07-16  John W. Eaton  <jwe@octave.org>

	* graphics.h.in (gh_manager::autolock): Delete copy constructor
	and assignment definitions.

2008-07-16  Michael Goffioul  <michael.goffioul@gmail.com>